--- a/space.html
+++ b/space.html
@@ -47,26 +47,34 @@
             </div>
         </section>
         <section class="flying">
-            <table>
-                <tr>
-                    <th>№ Рейса</th>
-                    <th>Откуда — куда</th>
-                    <th>Время вылета</th>
-                    <th>Время прилета</th>
-                </tr>
-                <tr>
-                    <td>1635</td>
-                    <td>VKO — MOON</td>
-                    <td>00:45</td>
-                    <td>23:15</td>
-                </tr>
-                <tr>
-                    <td>70200</td>
-                    <td>LED — MOON</td>
-                    <td>17:30</td>
-                    <td>16:20</td>
-                </tr>
-            </table>
+            <div class="container">
+                <div>
+                    <h2>Расписание полетов</h2>
+                </div>
+                <div>
+
+                </div>
+                <table>
+                    <tr>
+                        <th>№ Рейса</th>
+                        <th>Откуда — куда</th>
+                        <th>Время вылета</th>
+                        <th>Время прилета</th>
+                    </tr>
+                    <tr>
+                        <td>1635</td>
+                        <td>VKO — MOON</td>
+                        <td>00:45</td>
+                        <td>23:15</td>
+                    </tr>
+                    <tr>
+                        <td>70200</td>
+                        <td>LED — MOON</td>
+                        <td>17:30</td>
+                        <td>16:20</td>
+                    </tr>
+                </table>
+            </div>
         </section>
         <section class="advantages">
             <div class="container">
