--- a/space.html
+++ b/space.html
@@ -35,7 +35,8 @@
         <section class="moon">
             <div class="container">
                 <div class="col-1 man">
-                    <h1><strong>На луну и обратно</strong></h1>
+                    <h1>На луну и обратно</h1>
+<!--                    на луне были strong в h1-->
                     <p>Космически крутой туризм.
                     <br>
                         Пакетные и индивидуальные туры по лучшим планетам галактики</p>
@@ -52,7 +53,7 @@
                     <h2>Расписание полетов</h2>
                 </div>
                 <div>
-
+                    <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
                 </div>
                 <table>
                     <tr>
