--- a/space.html
+++ b/space.html
@@ -36,7 +36,6 @@
             <div class="container">
                 <div class="col-1 man">
                     <h1>На луну и обратно</h1>
-<!--                    на луне были strong в h1-->
                     <p>Космически крутой туризм.
                     <br>
                         Пакетные и индивидуальные туры по лучшим планетам галактики</p>
@@ -48,33 +47,37 @@
             </div>
         </section>
         <section class="flying">
-            <div class="container">
-                <div>
-                    <h2>Расписание полетов</h2>
+            <div class="container column">
+                <div class="block">
+                    <div class="col-1 left-column">
+                        <h2>Расписание полетов</h2>
+                    </div>
+                    <div class="right-column">
+                        <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
+                <div class="block">
+                    <table>
+                        <tr>
+                            <th>№ Рейса</th>
+                            <th>Откуда — куда</th>
+                            <th>Время вылета</th>
+                            <th>Время прилета</th>
+                        </tr>
+                        <tr>
+                            <td>1635</td>
+                            <td>VKO — MOON</td>
+                            <td>00:45</td>
+                            <td>23:15</td>
+                        </tr>
+                        <tr>
+                            <td>70200</td>
+                            <td>LED — MOON</td>
+                            <td>17:30</td>
+                            <td>16:20</td>
+                        </tr>
+                    </table>
                 </div>
-                <table>
-                    <tr>
-                        <th>№ Рейса</th>
-                        <th>Откуда — куда</th>
-                        <th>Время вылета</th>
-                        <th>Время прилета</th>
-                    </tr>
-                    <tr>
-                        <td>1635</td>
-                        <td>VKO — MOON</td>
-                        <td>00:45</td>
-                        <td>23:15</td>
-                    </tr>
-                    <tr>
-                        <td>70200</td>
-                        <td>LED — MOON</td>
-                        <td>17:30</td>
-                        <td>16:20</td>
-                    </tr>
-                </table>
             </div>
         </section>
         <section class="advantages">
