--- a/space.html
+++ b/space.html
@@ -50,7 +50,8 @@
             <div class="container column">
                 <div class="block">
                     <div class="col-1 left-column">
-                        <h2>Расписание полетов</h2>
+                        <h2>Расписание</h2>
+                        <h2>полетов</h2>
                     </div>
                     <div class="right-column">
                         <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
