--- a/space.html
+++ b/space.html
@@ -46,41 +46,6 @@
                 </div>
             </div>
         </section>
-        <section class="flying">
-            <div class="container column">
-                <div class="block">
-                    <div class="col-1 left-column">
-                        <h2>Расписание</h2>
-                        <h2>полетов</h2>
-                    </div>
-                    <div class="right-column">
-                        <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
-                    </div>
-                </div>
-                <div class="block">
-                    <table>
-                        <tr>
-                            <th>№ Рейса</th>
-                            <th>Откуда — куда</th>
-                            <th>Время вылета</th>
-                            <th>Время прилета</th>
-                        </tr>
-                        <tr>
-                            <td>1635</td>
-                            <td>VKO — MOON</td>
-                            <td>00:45</td>
-                            <td>23:15</td>
-                        </tr>
-                        <tr>
-                            <td>70200</td>
-                            <td>LED — MOON</td>
-                            <td>17:30</td>
-                            <td>16:20</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </section>
         <section class="advantages">
             <div class="container">
                 <div class="block">
@@ -122,19 +87,60 @@
                     <div class="col-1 left-column">
                         <h2>Не забудьте взять с собой:</h2>
                         <ul>
-                            <li><strong>Паспорт.</strong> Визовый режим пока не введе, но на границе бедет досмотр.</li>
-                            <li><strong>Тяжелые ботинки.</strong> Пригодятся вам в условиях низкой гравитации на Луне.</li>
-                            <li><strong>Криптовалюта.</strong> Рекомендуем заранее обмеять немного Лун-коинов, чтобы купить сувениры.</li>
+                            <li>Паспорт. Визовый режим пока не введе, но на границе бедет досмотр.</li>
+                            <li>Тяжелые ботинки. Пригодятся вам в условиях низкой гравитации на Луне.</li>
+                            <li>Криптовалюта. Рекомендуем заранее обмеять немного Лун-коинов, чтобы купить сувениры.</li>
                         </ul>
                     </div>
                     <div class="col-1 right-column">
                         <h2>Это лучше оставить дома:</h2>
                         <ul>
-                            <li><strong>Телефон.</strong> В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
-                            <li><strong>Бутерброды.</strong> На борту будет питани, которое не разлетится по кабине в условиях невесомости.</li>
-                            <li><strong>Плавки/купальник.</strong> Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
+                            <li>Телефон. В космосе не ловит ваш любимый оператор и нет Wi-Fi.</li>
+                            <li>Бутерброды. На борту будет питани, которое не разлетится по кабине в условиях невесомости.</li>
+                            <li>Плавки/купальник. Море Ясности и Океан Бурь это большие кратеры. Без воды.</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <form action="https://echo.htmlacademy.ru/courses" method="post">
+                <input type="text" name="login">
+    </form>
+        </section>
+        <section class="flying">
+            <div class="container column">
+                <div class="block">
+                    <div class="col-1 left-column">
+                        <h2>Расписание
+                        <br>
+                            полетов</h2>
+                    </div>
+                    <div class="right-column">
+                        <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
+                    </div>
+                </div>
+                <div class="block">
+                    <table>
+                        <tr>
+                            <th>№ Рейса</th>
+                            <th>Откуда — куда</th>
+                            <th>Время вылета</th>
+                            <th>Время прилета</th>
+                        </tr>
+                        <tr>
+                            <td>1635</td>
+                            <td>VKO — MOON</td>
+                            <td>00:45</td>
+                            <td>23:15</td>
+                        </tr>
+                        <tr>
+                            <td>70200</td>
+                            <td>LED — MOON</td>
+                            <td>17:30</td>
+                            <td>16:20</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </section>
