--- a/space.html
+++ b/space.html
@@ -104,9 +104,17 @@
             </div>
         </section>
         <section>
-            <form action="https://echo.htmlacademy.ru/courses" method="post">
-                <input type="text" name="login">
-    </form>
+            <form action="#" method="post">
+                <input type="text" name="full name" id="full-name" value="ФИО">
+                <br>
+                <input type="text" name="contact number" id="contact-number-field" value="Контактный телефон">
+                <br>
+                <input type="text" name="height" id="height-field" cols="3" value="Рост">
+                <input type="text" name="weight" id="weight-field" cols="3" value="Вес">
+                <br>
+                <input type="checkbox" name="agree" id="agree-field" checked>
+                <label for="agree-field">Согласен(а) на обработку персональных данных</label>
+            </form>
         </section>
         <section class="flying">
             <div class="container column">
