--- a/space.html
+++ b/space.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="shape">
             <form action="#" method="post">
                 <input type="text" name="full name" id="full-name" value="ФИО">
                 <br>
