--- a/space.html
+++ b/space.html
@@ -104,17 +104,31 @@
             </div>
         </section>
         <section class="shape">
-            <form action="#" method="post">
-                <input type="text" name="full name" id="full-name" value="ФИО">
-                <br>
-                <input type="text" name="contact number" id="contact-number-field" value="Контактный телефон">
-                <br>
-                <input type="text" name="height" id="height-field" cols="3" value="Рост">
-                <input type="text" name="weight" id="weight-field" cols="3" value="Вес">
-                <br>
-                <input type="checkbox" name="agree" id="agree-field" checked>
-                <label for="agree-field">Согласен(а) на обработку персональных данных</label>
-            </form>
+            <div class="container column">
+                <div class="block">
+                    <div class="col-1 left-column">
+                        <h2>Готовы открыть
+                        <br>
+                            для себя что-то новое?</h2>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="col-1 right-column">
+                        <form action="#" method="post">
+                            <input type="text" name="full name" id="full-name" value="ФИО">
+                            <br>
+                            <input type="text" name="contact number" id="contact-number-field" value="Контактный телефон">
+                            <br>
+                            <input type="text" name="height" id="height-field" value="Рост">
+                            <input type="text" name="weight" id="weight-field" value="Вес">
+                            <br>
+                            <input type="checkbox" name="agree" id="agree-field" checked>
+                            <label for="agree-field">Согласен(а) на обработку персональных данных</label>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="flying">
             <div class="container column">
@@ -123,9 +137,18 @@
                         <h2>Расписание
                         <br>
                             полетов</h2>
+                        <p>Отправте заявку, заполнив форму справа,
+                        <br>
+                            мы рассмотрим вашу кандидатури и свяжемся
+                        <br>
+                            с ваами в течении 24 часов.</p>
                     </div>
                     <div class="right-column">
-                        <p>Для вашего удобства мы разработали график полнтов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить индивидуальный полет.</p>
+                        <p>Для вашего удобства мы разработали график полнтов
+                        <br>
+                           с вылетами из Москвы и Санкт-Петербурга. Вы также можете
+                        <br>
+                           запросить индивидуальный полет.</p>
                     </div>
                 </div>
                 <div class="block">
