--- a/space.html
+++ b/space.html
@@ -143,7 +143,7 @@
                         <br>
                             с ваами в течении 24 часов.</p>
                     </div>
-                    <div class="right-column">
+                    <div class="col-1 right-column">
                         <p>Для вашего удобства мы разработали график полнтов
                         <br>
                            с вылетами из Москвы и Санкт-Петербурга. Вы также можете
