--- a/space.html
+++ b/space.html
@@ -128,6 +128,7 @@
                             <input type="checkbox" name="agree" id="agree-field" checked>
                             <label for="agree-field">Согласен(а) на обработку персональных данных</label>
                         </form>
+                        <a href="#" class="btn btn-grey">Отправить</a>
                     </div>
                 </div>
             </div>
