--- a/space.html
+++ b/space.html
@@ -146,7 +146,7 @@
                         <br>
                            с вылетами из Москвы и Санкт-Петербурга. Вы также можете
                         <br>
-                           запросить индивидуальный полет.</p>
+                            запросить <a href="#">индивидуальный полет</a>.</p>
                     </div>
                 </div>
                 <div class="block">
