input[type="checkbox"]

--- a/space.html
+++ b/space.html
@@ -122,8 +122,8 @@
                             <br>
                             <input type="text" name="contact number" id="contact-number-field" value="Контактный телефон">
                             <br>
-                            <input type="tex" name="height" id="height-field" value="Рост">
-                            <input type="tex" name="weight" id="weight-field" value="Вес">
+                            <input type="txt" name="height" id="height-field" value="Рост">
+                            <input type="txt" name="weight" id="weight-field" value="Вес">
                             <br>
                             <input type="checkbox" name="agree" id="agree-field" checked>
                             <label for="agree-field">Согласен(а) на обработку персональных данных</label>
